--- a/swdev/css/styles.css
+++ b/swdev/css/styles.css
@@ -23,45 +23,45 @@ header, h1, h2, h3, h4, h5, h6 {
 }
 
 h1.thin-pink-bottom-border {
-	border-bottom:3px solid #ED228E;
-	padding-bottom:13px;
-	display:inline-block;
+    border-bottom:3px solid #ED228E;
+    padding-bottom:13px;
+    display:inline-block;
 }
 
 h1.v-center {
-	margin-top:250px;
+    margin-top:250px;
 }
 
 .hidden {
-	display:none;
+    display:none;
 }
 
 .bigger {
-	font-size:300%;
+    font-size:300%;
 }
 
 .smaller {
-	font-size:80%;
+    font-size:80%;
 }
 
 .magenta {
-	color:#ED228E;
+    color:#ED228E;
 }
 
 .slides.template-huge > .slide {
-	border-radius:0px;
+    border-radius:0px;
 }
 
 .slides.template-huge > .slide.white-border {
-	border:18px solid #fff;
+    border:18px solid #fff;
 }
 
 .slides.template-huge > .slide.invert {
-	color:#e1e1e1;
+    color:#e1e1e1;
 }
 
 .slides.template-huge > .slide.invert a {
-	color:#fff;
+    color:#fff;
 }
 
 .slides.template-huge > .slide.green {
@@ -69,25 +69,36 @@ h1.v-center {
 }
 
 .slides.template-huge > .slide.magenta {
-	background-color:#ED228E;
+    background-color:#ED228E;
 }
 
 .slides.template-huge > .slide.black {
-	background-color:#000;
+    background-color:#000;
 }
 
 .menu-container {
-	display: none;
-	background-color: #ffffff;
-	font-family:'HUGEAvantGardeBold', arial, sans-serif;
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	overflow-y: scroll;
-	z-index: 100000;
+    display: none;
+    background-color: #ffffff;
+    font-family:'HUGEAvantGardeBold', arial, sans-serif;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    z-index: 100000;
 }
-	.fast-nav { position: absolute; top: 50px; left: 50px; }
-		.fast-nav a { display: block; color: #000; margin: 0 0 20px; font-size: 30px; text-decoration: none; text-transform: uppercase; }
-	ul.menu { list-style-type: none; margin: 50px 0; }
-		ul.menu li { text-align: center; }
-			ul.menu li a { color: #ED228E; text-decoration: none; }
+    .fast-nav { position: absolute; top: 50px; left: 50px; }
+        .fast-nav a { display: block; color: #000; margin: 0 0 20px; font-size: 30px; text-decoration: none; text-transform: uppercase; }
+    ul.menu { list-style-type: none; margin: 50px 0; }
+        ul.menu li { text-align: center; }
+            ul.menu li a { color: #ED228E; text-decoration: none; }
+            
+pre[class*="language-"] {
+    padding: 0em 1em 1em 1em;
+}
+
+
+
+
+
+
+            
